--- a/index.html
+++ b/index.html
@@ -18,20 +18,6 @@
     </section>
     <!-- end -->
 
-    <!-- Hero sections for each screens  starts here -->
-
-    <!-- Hero sections for mobile starts here 
-    <section class="hero-mobile">
-        <div class="hero-mobile-image">
-            <img src="\assets\desktop\image-hero-left.png" alt="hero-photo" class="hero-image">
-            <img src="\assets\desktop\image-hero-right.png" alt="hero-photo" class="hero-image">
-        </div>
-        <div>
-            <h2 class="hero-heading">Group Chat <br> Everyone</h2>
-        </div>
-    </section>
- end -->
-
     <!-- Hero sections for desktop starts here -->
     <section class="hero-desktop">
         <div>
@@ -87,15 +73,8 @@
     <footer>
         <h3>Experience more <br> together</h3>
         <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-        <button>Download v1.3</button>
+        <button>Download<span>v1.3</span></button>
     </footer>
-
-    <!-- <div class="red">
-        <h1>red</h1>
-    </div>
-    <div class="blue">
-        <h1>blue</h1>
-    </div> -->
 </body>
 
 </html>
